master_worker/QA/ingress/00-ingress-mineco.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  namespace: mineco-qa
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"
    cert-manager.io/cluster-issuer: letsencrypt-staging
    acme.cert-manager.io/http01-edit-in-place: "true"
    cert-manager.io/issue-temporary-certificate: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
spec:
  tls:
    - hosts:
      - qasic.mineco.gob.gt
      - qadti.mineco.gob.gt
      - qajuridico.mineco.gob.gt
      - qavehiculos.mineco.gob.gt
      - qapartidas.mineco.gob.gt
      - qaupload.mineco.gob.gt
      - qabpm.mineco.gob.gt
      # # - bpm.mineco.gob.gt
      - programasyproyectos.mineco.gob.gt
      secretName: default-server-secret-qa
  rules:
  - host: programasyproyectos.mineco.gob.gt
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: planificador-qa-server
              port:
                number: 80
  - host: qabpm.mineco.gob.gt
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: bpm-disercomi-qa
              port:
                number: 80
  # - host: bpm.mineco.gob.gt
  #   http:
  #     paths:
  #       - path: /
  #         pathType: Prefix
  #         backend:
  #           service:
  #             name: bpm-disercomi-server
  #             port:
  #               number: 80
  - host: qasic.mineco.gob.gt
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: sic-qa
            port:
              number: 80
  - host: qaupload.mineco.gob.gt
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: server-upload
            port:
              number: 80
  - host: qadti.mineco.gob.gt
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: dti-qa
            port:
              number: 80
  - host: qajuridico.mineco.gob.gt
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: juridicos-qa
            port:
              number: 80
  - host: qavehiculos.mineco.gob.gt
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: vehiculos-qa
            port:
              number: 80
  - host: qapartidas.mineco.gob.gt
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: presupuesto-qa
            port:
              number: 80
